<resources>
    <string name="app_name">Pulse Rate Notifier</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail  address</string>
    <string name="contact">Contact Number</string>
    <string name="password">Password</string>
    <string name="have_account">Already have account? Login</string>
    <string name="login">Login</string>
    <string name="new_register">New here? Sign Up</string>
    <string name="skip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">Next</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="start">GOT IT</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="member_login">Member Login</string>

    <!-- dots active colors -->
    <color name="dot_light_screen1">#f98da5</color>
    <color name="dot_light_screen2">#8cf9eb</color>
    <color name="dot_light_screen3">#93c6fd</color>
    <color name="dot_light_screen4">#e4b5fc</color>

    <!-- dots inactive colors -->
    <color name="dot_dark_screen1">#d1395c</color>
    <color name="dot_dark_screen2">#14a895</color>
    <color name="dot_dark_screen3">#2278d4</color>
    <color name="dot_dark_screen4">#a854d4</color>

    <string name="patient">Patient</string>
    <string name="care_taker">Care Taker</string>
    <string name="doctor">Doctor</string>
    <string name="role_hint">Select Role</string>
    <string name="utf8">UTF-8</string>
    <string name="register_or_login">Register/Login</string>
    <string name="show_pulse_rate">Record Pulse Rate</string>
    <string name="sync_with_server">Sync With Server</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="pulse_rate_string">Pulse rate appears here</string>
    <string name="patient_details">Enter Details</string>
    <string name="sync">Sync</string>

    <string name="device_id">Device Id</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="add_patient_title">Add Email of patient whose pulse rate you want to observe</string>
    <string name="add">Add</string>
    <string name="proceed">Proceed</string>
    <string name="got_it">Got it</string>
    <string name="ok">ok</string>
    <string name="home">Home</string>
    <string name="show_analysis">Show Analysis</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about_app">About Application</string>
    <string name="emergency">Emergency</string>
    <string name="show_patients">Show Patients</string>
    <string name="report_activity_title">Reports</string>

</resources>
