<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.digvijay.pulseratenotifier.fragment.LoginFragment"
    android:background="@color/new_background" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:showDividers="middle"
            android:divider="@drawable/empty_tall_divider">

            <TextView
                android:id="@+id/login_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/title_text"
                android:textColor="@color/text_color"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/login_email_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_field_height"
                android:textColor="@android:color/black"
                android:background="@drawable/rounded_corner"
                android:textSize="@dimen/form_field_text"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_field_height"
                android:textColor="@android:color/black"
                android:background="@drawable/rounded_corner"
                android:textSize="@dimen/form_field_text"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_field_height"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="@dimen/form_field_text"
                android:textColor="@android:color/white"
                android:background="@drawable/button_rounded_corner"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" />

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_register"
                android:textColor="@color/text_color"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/form_field_text"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>